option('vulkan',         type : 'boolean', value : true,   description : 'Build Vulkan display support')
option('examples',       type : 'boolean', value : true,   description : 'Build example programs')
option('tests',          type : 'boolean', value : true,   description : 'Build unit and integration tests')
option('benchmarks',     type : 'boolean', value : false,  description : 'Build perf benchmarks (plane_stress, allocator_torture)')
option('thorvg_janitor', type : 'feature', value : 'auto', description : 'Build the ThorVG Janitor example (needs thorvg)')
option('session', type : 'feature', value : 'auto', description : 'Build drm::session::Seat on top of libseat (auto-mux of logind/seatd/builtin)')
option('cursor',  type : 'feature', value : 'auto', description : 'Build drm::cursor (XCursor theme resolver + KMS cursor renderer, needs libxcursor)')
option('blend2d', type : 'feature', value : 'auto', description : 'Build drm::capture and drm::csd on top of Blend2D (CMake-config dep, no pkg-config upstream)')
option('camera',  type : 'feature', value : 'auto', description : 'Build the camera example (needs libcamera>=0.3.0 and libyuv)')
option('keyboard', type : 'feature', value : 'disabled', description : 'Build the keyboard demo (downloads Noto Sans at configure time; disable for sandboxed/offline builds)')
option('gstreamer', type : 'feature', value : 'auto', description : 'Build drm::scene::GstAppsinkSource on top of GStreamer (needs gstreamer-1.0, gstreamer-app-1.0, gstreamer-allocators-1.0, gstreamer-video-1.0)')
option('egl',      type : 'feature', value : 'auto', description : 'Build drm::present EGL render-offload support (GlScanoutProducer; needs EGL headers, libEGL loaded at runtime via dlopen). Independent of streams; enables the render-on-GPU / scan-out-on-display split on Mesa GPUs (e.g. PowerVR on StarFive).')
option('streams',  type : 'feature', value : 'auto', description : 'Build drm::scene EGL Streams support (needs EGL headers; libEGL loaded at runtime via dlopen — typically NVIDIA proprietary / Tegra). Implies egl.')
option('nvbufsurface', type : 'feature', value : 'auto', description : 'Build drm::scene::NvBufSurfaceSource on top of NVIDIA L4T NvBufSurface (needs nvbufsurface.h from jetson_multimedia_api and libnvbufsurface.so; Jetson L4T only)')
